# classic_crypto

./: .gitignore  Cargo.toml  LICENSE  README.md  check.sh  publish.sh
.github/workflows/: rust.yml
examples/data/: corpus.txt  english.json
src/: convert.rs  error.rs  lang.rs  lib.rs  util.rs
src/cipher/: cipher.rs  mod.rs
src/cipher/electromechanical/: enigma.rs
src/cipher/monoalph/: affine.rs  atbash.rs  baconian.rs  caesar.rs  mod.rs  morse.rs  polybius_square.rs  rot13.rs  simple_sub.rs
src/cipher/polyalph/: autokey.rs  beaufort.rs  bellaso.rs  classic_vig.rs  classic_vigenere.rs  keyed_vig.rs  mod.rs  porta.rs
src/cipher/polygraph/: hill.rs  mod.rs
src/cipher/transpos/: block_transpos.rs  column_transpos.rs  mod.rs  railfence.rs  scytale.rs
src/cli/: analyse.rs  auto_solve.rs  cipher.rs  decrypt.rs  encrypt.rs  lang_gen.rs  mod.rs  solve.rs
src/key/: alphabet.rs  cards.rs  key.rs  keyword.rs  matrix.rs  mod.rs  number.rs  polybius_square.rs
src/key/enigma/: mod.rs  plugboard.rs  reflector.rs  rotor.rs
src/key/vigenere_square/: bellaso_square.rs  classic_vig_square.rs  keyed_vig_square.rs  mod.rs  porta_square.rs  vig_square.rs
src/lang/: lang_alphabet.rs  language.rs  mod.rs
src/util/: mod.rs  prime_gen.rs
