[package]
name = "classic_crypto"
version = "0.1.0"
authors = ["Tom Thorogood <tomthorogood@outlook.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/upsidedown8/classic_crypto"
documentation = "https://docs.rs/classic_crypto"
homepage = "https://github.com/upsidedown8/classic_crypto"
description = "Classical ciphers in rust, with a focus on multi-lingual support."
keywords = ["crypto", "classical", "cipher"]
categories = ["cryptography"]

[dependencies]
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
