[package]
authors = ["Tom Thorogood <tomthorogood@outlook.com>"]
categories = ["cryptography"]
description = "Classical ciphers in rust, with a focus on multi-lingual support."
documentation = "https://docs.rs/classic_crypto"
edition = "2018"
homepage = "https://github.com/upsidedown8/classic_crypto"
keywords = ["crypto", "classical", "cipher"]
license-file = "LICENSE"
name = "classic_crypto"
readme = "README.md"
repository = "https://github.com/upsidedown8/classic_crypto"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
owo-colors = "2.0.0"
rand = "0.8.3"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3.21"
