[package]
authors = ["Tom Thorogood <tomthorogood@outlook.com>"]
categories = ["cryptography"]
description = "Encrypt, decrypt and solve classical ciphers with any charset."
documentation = "https://docs.rs/classic_crypto"
edition = "2018"
homepage = "https://github.com/upsidedown8/classic_crypto"
keywords = ["crypto", "classical", "cipher"]
license-file = "LICENSE"
name = "classic_crypto"
readme = "README.md"
repository = "https://github.com/upsidedown8/classic_crypto"
version = "0.2.0"

[dependencies]
bincode = "1.3.3"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
